--- a/themes/compro_theme/sass/drupal/_entity.scss
+++ b/themes/compro_theme/sass/drupal/_entity.scss
@@ -29,7 +29,7 @@
     flex-direction: column;
 
     .featured-report-image {
-      max-height: 250px;
+      height: 300px;
       overflow: hidden;
       width: 100%;
     }
